Added factory, modem and hardware version to "About phone" dialog
Change-Id: I0e59ea9426b6f5c78f05794b7972083df578cab8

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -256,8 +256,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="DeviceInfoSettings" android:label="@string/device_info_settings"
-                >
+        <activity android:name="DeviceInfoSettings"
+                android:label="@string/device_info_settings"
+                android:process="com.android.phone" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
