--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -318,8 +318,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="DeviceInfoSettings" android:label="@string/device_info_settings"
-                >
+        <activity android:name="DeviceInfoSettings"
+                android:label="@string/device_info_settings"
+                android:process="com.android.phone" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.settings.DEVICE_INFO_SETTINGS" />
